--- a/package.json
+++ b/package.json
@@ -2,8 +2,26 @@
   "name": "gpt-ad-scripts",
   "version": "2.0.0",
   "preferGlobal": false,
+  "private": true,
   "dependencies": {
     "requirejs": "*",
     "uglify-js": "1.3.4"
+  },
+  "devDependencies": {
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-compass": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-qunit": "~0.2.2",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt": "~0.4.1",
+    "bower": "~1.1.0",
+    "grunt-contrib-connect": "~0.2.0",
+    "grunt-contrib-watch": "~0.4.3",
+    "grunt-open": "~0.2.0",
+    "matchdep": "~0.1.2",
+    "connect-livereload": "~0.1.3",
+    "grunt-requirejs": "~0.3.5",
+    "grunt-concurrent": "~0.3.0"
   }
 }
