--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "matchdep": "~0.1.2",
     "connect-livereload": "~0.1.3",
     "grunt-requirejs": "~0.3.5",
-    "grunt-concurrent": "~0.3.0"
+    "grunt-concurrent": "~0.3.0",
+    "time-grunt": "~0.1.1"
   }
 }
