--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "connect-livereload": "~0.1.3",
     "grunt-requirejs": "~0.3.5",
     "grunt-concurrent": "~0.3.0",
-    "time-grunt": "~0.1.1"
+    "time-grunt": "~0.1.1",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
