--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "jquery": "~1.7.2",
-    "qunit": "~1.12.0"
+    "qunit": "~1.12.0",
+    "enquire": "~2.1.0"
   }
 }
