--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "grunt-open": "~0.2.0",
     "matchdep": "~0.1.2",
     "connect-livereload": "~0.1.3",
-    "grunt-requirejs": "~0.3.5",
     "grunt-concurrent": "~0.3.0",
     "time-grunt": "~0.1.1",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-requirejs": "~0.4.0"
   }
 }
