--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "jquery": "~1.7.2",
     "qunit": "~1.12.0",
-    "enquire": "~2.1.0"
+    "enquire": "~2.1.0",
+    "yepnope": "~1.5.4"
   }
 }
