--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "grunt-concurrent": "~0.3.0",
     "time-grunt": "~0.1.1",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-requirejs": "~0.4.0"
+    "grunt-requirejs": "~0.4.0",
+    "cheerio": "~0.12.3",
+    "grunt-curl": "~1.1.1"
   }
 }
