--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "grunt-contrib-uglify": "~0.2.0",
     "grunt": "~0.4.1",
     "bower": "~1.1.0",
-    "grunt-contrib-connect": "~0.2.0",
     "grunt-contrib-watch": "~0.4.3",
     "grunt-open": "~0.2.0",
     "matchdep": "~0.1.2",
-    "connect-livereload": "~0.1.3",
     "grunt-concurrent": "~0.3.0",
     "time-grunt": "~0.1.1",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-requirejs": "~0.4.0",
     "cheerio": "~0.12.3",
-    "grunt-curl": "~1.1.1"
+    "grunt-curl": "~1.1.1",
+    "grunt-contrib-connect": "~0.5.0",
+    "connect-livereload": "~0.3.0"
   }
 }
